RESOLVED FIXED183474
MIPS+Armv7 builds are broken since r229391
https://bugs.webkit.org/show_bug.cgi?id=183474
Summary MIPS+Armv7 builds are broken since r229391
Guillaume Emont
Reported 2018-03-08 13:29:40 PST
Some extra work is needed to make them build again (I started work on this).
Attachments
Patch (3.31 KB, patch)
2018-03-09 19:49 PST, Guillaume Emont
no flags
Patch (3.22 KB, patch)
2018-03-20 10:53 PDT, Guillaume Emont
no flags
Patch (4.36 KB, patch)
2018-03-20 11:40 PDT, Guillaume Emont
no flags
Guillaume Emont
Comment 1 2018-03-09 19:49:06 PST
Created attachment 335497 [details] Patch Preliminary patch that fixes a bunch of small things. With that, things compile on arm and mips, but will follow the x86 calling convention and therefore should be expected to fail at runtime.
Guillaume Emont
Comment 2 2018-03-09 19:58:15 PST
From what I understood of the armv7 calling convention, it should be relatively easy to get that working, as it seems to be pretty similar to what we have for x86_64 or arm64. Mips on the other hand has a whole bunch of special rules that will need to be put in place, especially when floats/doubles come into the equation, incuding, but not limited to: - a float/double passed as first argument is always in $f12 - a float/double in second argument will be in $f14 if the first argument is a float/double, but in $a3 (or $a3 and $a4 for double) if the first argument is integral.
Guillaume Emont
Comment 3 2018-03-09 20:02:29 PST
Also a note regarding the operationGetByValCell call: this looks like it was a bug that was found thanks to the new system, so yay! It was quite hard to find where was the offending call with the output I got from gcc though (more recent versions of gcc might be better at it, not sure, I should try). Relatedly, I guess it would be nice to add a unit test for that operationGetByValCell call if we can.
Guillaume Emont
Comment 4 2018-03-20 10:53:12 PDT
Created attachment 336132 [details] Patch Rebased patch. A patch fixing the CCallHelpers will be provided in a separate bug by Dominik Infuehr
Guillaume Emont
Comment 5 2018-03-20 11:40:48 PDT
Created attachment 336137 [details] Patch Fixed CellTag → JSCellType
Yusuke Suzuki
Comment 6 2018-03-20 12:26:45 PDT
Comment on attachment 336137 [details] Patch r=me
WebKit Commit Bot
Comment 7 2018-03-20 13:37:51 PDT
Comment on attachment 336137 [details] Patch Clearing flags on attachment: 336137 Committed r229772: <https://trac.webkit.org/changeset/229772>
WebKit Commit Bot
Comment 8 2018-03-20 13:37:52 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 9 2018-03-20 13:38:22 PDT
Note You need to log in before you can comment on or make changes to this bug.